style Updated CSS

--- a/index.css
+++ b/index.css
@@ -1,52 +1,198 @@
-header {
-	
-	height: 20px; 
-	background-color: lightgray;
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	padding: 20px 20px 20px 20px;
-	font-size: 1.5em;
+/* General styling */
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f8f9fa;
+    margin: 0;
+    padding: 0 80px; /* Add padding to the left and right */
+}
 
+.container-fluid {
+    padding: 20px;
 }
+
+.page-header {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 20px;
+}
+
+.page-header h2 {
+    margin: 0;
+}
+
+.page-header p {
+    margin: 10px 0;
+}
+
+.page-header ol {
+    margin: 10px 0;
+    padding-left: 20px;
+}
+
+.header-actions {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.header-actions h2 {
+    margin: 0;
+    margin-right: auto;
+}
+
+.header-actions .btn {
+    margin-left: 10px;
+}
+
+.form-inline {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.button-group {
+    display: flex;
+    margin-left: auto;
+}
+
+.button-group .btn {
+    margin-left: 10px;
+}
+
+/* Table styling */
+.table {
+    width: 100%;
+    margin-bottom: 20px;
+    border-collapse: collapse;
+}
+
+.table th, .table td {
+    padding: 10px;
+    border: 1px solid #dee2e6;
+    text-align: left;
+}
+
+.table th {
+    background-color: #343a40;
+    color: white;
+}
+
+.table tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+.table tr:hover {
+    background-color: #e9ecef;
+}
+
+/* Form styling */
+.form-inline .form-group {
+    margin-right: 10px;
+}
+
+.form-inline .form-control {
+    width: auto;
+    display: inline-block;
+}
+
+.form-inline .btn {
+    vertical-align: middle;
+}
+
+/* Button styling */
+.btn-success {
+    background-color: #28a745;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    text-decoration: none;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+}
+
+.btn-success:hover {
+    background-color: #218838;
+}
+
+.btn-danger {
+    background-color: #dc3545;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    text-decoration: none;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+}
+
+.btn-danger:hover {
+    background-color: #c82333;
+}
+
+.btn-primary {
+    background-color: #007bff;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    text-decoration: none;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+}
+
+.btn-primary:hover {
+    background-color: #0056b3;
+}
+
+/* Header styling */
+header {
+    height: 60px;
+    background-color: lightgray;
+    margin: 0;
+    padding: 20px;
+    font-size: 1.5em;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 header > h1 {
-	color: white;
-	font-size : 3em;
-	font-style: italic;
-	text-align: right;
+    color: white;
+    font-size: 3em;
+    font-style: italic;
+    margin: 0;
 }
+
 header > img {
     float: left;
-    margin: 0 0 10px 10px;
+    margin: 0 10px 10px 0;
 }
 
 header em {
-	font-size: 0.75em
+    font-size: 0.75em;
 }
 
-
-html {
-	background-color: light gray;
-	font-family: Helvetica;
-	font-size: 18px;
-}
+/* Navigation styling */
 nav ul {
     list-style-type: none;
     padding: 0;
     overflow: hidden;
     background-color: #333;
-	margin: 0 0 0 0;
+    margin: 0;
 }
 
 nav li {
     float: left;
-    border-right:1px solid #bbb;
+    border-right: 1px solid #bbb;
 }
 
-nav li:nth-last-child(-n+3){
+nav li:nth-last-child(-n+3) {
     border-right: none;
     float: right;
-    border-left:1px solid #bbb;
+    border-left: 1px solid #bbb;
 }
 
 nav li a {
@@ -56,6 +202,7 @@ nav li a {
     padding: 10px 16px;
     text-decoration: none;
 }
+
 nav li a:hover:not(.active) {
     background-color: orange;
 }
@@ -63,127 +210,45 @@ nav li a:hover:not(.active) {
 nav .active {
     background-color: green;
 }
+
+/* Main content styling */
 main {
-	overflow:auto;
-	margin: auto;
-	margin: 10px 10px 10px 10px;
-	background-color: white;
-	border: solid grey 2px;
-	border-radius: 8px;
-	padding: 10px 10px 10px 10px;
-}
-#betSpan {
-	float: right;
-
-}
-#betSection {
-	margin: 10px 10px 10px 10px;
-}
-#buttons {
-	width: 600px;
-	height: 120px;
-	margin: auto;
-	margin-top: 10px;
+    overflow: auto;
+    margin: 10px;
+    background-color: white;
+    border: solid grey 2px;
+    border-radius: 8px;
+    padding: 10px;
 }
 
-.selector {
-	float: left;
-	margin: 10px;
-	width: 100px;
-	height: 100px;
-	opacity: 0.6;
+/* Footer styling */
+footer {
+    background-color: gray;
+    height: 40px;
+    padding: 10px;
+    color: white;
+    border: solid;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.selector:hover {
-	opacity: 1;
+#fspan {
+    font-family: verdana;
+    font-size: 12px;
+    color: orange;
 }
 
-#results {
-	width: 300px;
-	height: 180px;
-	margin: auto;
-
-}
-
-#results div {
-	float:left;
-	height: 100px;
-	width: 120px;
-	margin: 10px 15px;
-	text-align: center;
-}
-
-#results img {
-	margin: 10px;
-}
-
-#prompt {
-	text-align: center;
-	font-size: 35px;
-}
-
-
-
-#instructions {
-	display: inline-block;
-	width: 400px;
-	margin-left: 20px;
-	font-size: 12px;
-	background-color: white;
-	border: solid grey 2px;
-	border-radius: 8px;
-	padding: 0px 5px 15px 15px;
-}
-
-#scores {
-	width: 190px;
-	float: right;
-	text-align: right;
-	margin-right: 25px;
-	margin-top: 10px;
-}
-
-#imgwrapper {
-	display: block;
-	width: 600px;
-	height: 400px;
-	margin: 40px auto;
-	overflow:hidden;
-}
-
-#imgbox {
-	display: block;
-	margin: auto;
-}
+/* Additional styling */
 .clearfix {
     overflow: auto;
 }
 
 em {
-	font-family: "Times New Roman", Georgia, Serif;
+    font-family: "Times New Roman", Georgia, Serif;
 }
-footer {
-	background-color: gray;
-	height: 20px; 
-	padding: 10px;
-	padding-right: 10px;
-	color: white;
-	border: solid;
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 0px;
 
-}
-#fspan {
-	float: right;
-	font-family: verdana;
-    font-size: 12px;
-	color: orange;
-}
-.container1 {
-	margin-left: 20px;
-	font-size: 0.75em;
-}
 legend {
     padding: 1px 8px;
     border: 2px solid #e0d8b7;
@@ -193,10 +258,12 @@ legend {
     font-size: 14px;
     color: #5e5223;
 }
+
 form {
     display: block;
     margin-top: 0em;
 }
+
 fieldset label {
     float: left;
     clear: left;
@@ -206,6 +273,7 @@ fieldset label {
     font-size: 90%;
     color: #333;
 }
+
 fieldset input, fieldset textarea, fieldset select {
     padding: 2px 4px;
     border: 1px solid #ccc;
@@ -215,11 +283,13 @@ fieldset input, fieldset textarea, fieldset select {
     font-family: inherit;
     font-size: 1.1em;
 }
+
 fieldset span {
     display: block;
     margin: 0 0 0 120px;
     padding: 0 0 4px 4px;
 }
+
 fieldset input[type="submit"], fieldset input[type="reset"], fieldset input[type="button"] {
     padding: 2px 6px;
     border: #b5bbc4 1px solid;
@@ -231,79 +301,34 @@ fieldset input[type="submit"], fieldset input[type="reset"], fieldset input[type
     font-size: 100%;
     color: #333;
 }
+
 #passformat {
-	float: right; 
-	width: 50%; 
-	font-size: 0.8em;
+    float: right;
+    width: 50%;
+    font-size: 0.8em;
 }
 
-table,
-th,
-td {
-  border: 1px solid black;
-  border-collapse: collapse;
-}
-
-th,
-td {
-  padding: 5px;
-}
-
-table {
-  width: 50%;
-}
-
-table,
-th,
-td {
-  border: 1px solid black;
-  border-collapse: collapse;
-}
-
-th,
-td {
-  padding: 5px;
-  text-align: left;
-}
-table#t01 {
-	width:400px;
-}
-
-table#t01 tr:nth-child(even) {
-  background-color: #e0ebeb;
-}
-
-table#t01 tr:nth-child(odd) {
-  background-color: #fff;
-}
-
-table#t01 th {
-  background-color: black;
-  color: white;
-}
-
-#t01  tr:hover {
-  background-color: orange;
-  color: orange;
-}
 caption {
-  font-weight: bold;
-  padding: 0.5em 0 0.5em 0;
-  text-align: left;
-}
-.btn2 {
-  -webkit-border-radius: 2;
-  -moz-border-radius: 2;
-  border-radius: 2px;
-  font-family: Arial;
-  color: #ffffff;
-  font-size: 12px;
-  background: green;
-  padding: 8px 8px 8px 8px;
-  text-decoration: none;
+    font-weight: bold;
+    padding: 0.5em 0;
+    text-align: left;
 }
 
-.btn2:hover {
-  background: orange;
-  text-decoration: none;
+.align-center {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.align-center h3 {
+    margin: 0;
+}
+
+.align-center .button-group {
+    display: flex;
+    margin-left: auto;
+}
+
+.align-center .button-group .btn {
+    margin-left: 10px;
 }
