chore Add Names to Header

--- a/index.css
+++ b/index.css
@@ -1,3 +1,6 @@
+/* Group Number: 46
+Group Names: Dylan Liu, Michael Bernardino, Brendon Tran */
+
 /* General styling */
 body {
     font-family: Arial, sans-serif;
